--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,6 +5,5 @@ Welcome
 {% endblock title%}
 
 {% block content %}
-<h1>Homepage after login</h1>
-<a href="/logout">Log Out</a>
+<h1>Homepage comming soon!</h1>
 {% endblock content %}
