User model replaced with self created model User.

--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -5,5 +5,11 @@ Welcome
 {% endblock title%}
 
 {% block content %}
-<h1>Homepage comming soon!</h1>
+  <div class="home-review-options">
+    <a class="btn btn-light" href="#" role="button">Request a Review</a>
+    <a class="btn btn-light" href="#" role="button">Post a Review</a>
+  </div>
+  <div class="feed">
+
+  </div>
 {% endblock content %}
