--- a/main/static/main/styles/_login.scss
+++ b/main/static/main/styles/_login.scss
@@ -1,5 +1,5 @@
 .loginPage {
-  margin-top: 20vh;
+  margin-top: 10vh;
   display: flex;
   .indexSignUp {
     text-align: left;
@@ -17,3 +17,7 @@
     }
   }
 }
+
+.alert-warning {
+  margin-top: 10vh;
+  }
