--- a/register/templates/authenticate/login.html
+++ b/register/templates/authenticate/login.html
@@ -12,7 +12,7 @@ Log In
 
 <div class="alert alert-warning" role="alert"
 style="{% if not failed %}visibility: hidden{% endif %}">
-  Login failed! No account? <a href="/register" class="alert-link">Sign Up here</a>!
+  Login failed! No account? <a href="/register" class="alert-link">Sign Up Now</a>!
   </div>
 
 <div class="loginPage">
