Create Ticket Create Review Following new db 10 User added

--- a/main/static/main/styles/styles.scss
+++ b/main/static/main/styles/styles.scss
@@ -2,6 +2,8 @@
 @import "./signUp";
 @import "./login";
 @import "./home";
+@import "./following";
+@import "./create_ticket";
 
 body {
   width: 100vw;
