--- a/main/static/main/styles/styles.css
+++ b/main/static/main/styles/styles.css
@@ -96,6 +96,54 @@
   border: solid 1px;
 }
 
+.following {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 50px 0;
+}
+.following h3 {
+  margin-bottom: 40px;
+}
+
+.table {
+  width: 80vw;
+  height: fit-content;
+}
+.table .table-button {
+  width: 100px;
+  padding: 0;
+}
+.table .table-button button {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 0;
+}
+
+.ticket-content {
+  margin-top: 30px;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.ticket-content form {
+  width: 100%;
+}
+.ticket-content form label {
+  padding: 40px 0 10px 0;
+  font-size: 20px;
+}
+.ticket-content form .asteriskField {
+  display: none;
+}
+.ticket-content form button {
+  width: 100px;
+  float: right;
+  border-radius: 3px;
+}
+
 body {
   width: 100vw;
   display: flex;
