Review (not in response to a ticket) added

--- a/main/static/main/styles/styles.scss
+++ b/main/static/main/styles/styles.scss
@@ -4,6 +4,7 @@
 @import "./home";
 @import "./following";
 @import "./create_ticket";
+@import "./create_review_with_ticket";
 
 body {
   width: 100vw;
