--- a/main/static/main/styles/styles.css
+++ b/main/static/main/styles/styles.css
@@ -144,6 +144,30 @@
   border-radius: 3px;
 }
 
+.ticket-with-review-content {
+  margin-top: 30px;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.ticket-with-review-content form {
+  width: 100%;
+}
+.ticket-with-review-content form label {
+  padding: 40px 0 10px 0;
+  font-size: 20px;
+}
+.ticket-with-review-content form .asteriskField {
+  display: none;
+}
+.ticket-with-review-content form button {
+  width: 100px;
+  float: right;
+  border-radius: 3px;
+  margin: 40px 0;
+}
+
 body {
   width: 100vw;
   display: flex;
