--- a/main/templates/main/create_review_with_ticket.html
+++ b/main/templates/main/create_review_with_ticket.html
@@ -1,17 +1,20 @@
 {% extends 'main/base.html' %}
 
 {% block title %}
-  Create a Review (in response to a ticket)
+  Create a Review (not in response to a ticket)
 {% endblock title %}
 
 {% load crispy_forms_tags %}
 
 {% block content %}
 
-<div class="ticket-content">
+<div class="ticket-with-review-content">
   <h4>Create a Review</h4>
   <form method="post" class="form-group">
-    {{ form|crispy }}
+    {{ ticket_form|crispy }}
+    {% csrf_token %}
+
+    {{ review_form|crispy }}
     {% csrf_token %}
     <button type="submit">Submit</button>
   </form>
