--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -7,7 +7,7 @@ Welcome
 {% block content %}
   <div class="home-review-options">
     <a class="btn btn-light" href="{% url 'create_ticket' %}" role="button">Request a Review</a>
-    <a class="btn btn-light" href="{% url 'create_review' %}" role="button">Post a Review</a>
+    <a class="btn btn-light" href="{% url 'create_review_with_ticket' %}" role="button">Post a Review</a>
   </div>
   <div class="feed">
 
