Review (not in response to a ticket) - layout and rating section modified according to wireframe

--- a/main/static/main/styles/styles.scss
+++ b/main/static/main/styles/styles.scss
@@ -4,7 +4,7 @@
 @import "./home";
 @import "./following";
 @import "./create_ticket";
-@import "./create_review_with_ticket";
+@import "create_ticket_with_review";
 
 body {
   width: 100vw;
