--- a/main/static/main/styles/styles.css
+++ b/main/static/main/styles/styles.css
@@ -146,6 +146,7 @@
 
 .ticket-with-review-content {
   margin-top: 30px;
+  margin-bottom: 80px;
   width: 80vw;
   display: flex;
   flex-direction: column;
@@ -154,6 +155,10 @@
 .ticket-with-review-content form {
   width: 100%;
 }
+.ticket-with-review-content form .form-section {
+  padding: 20px;
+  border: 1px solid;
+}
 .ticket-with-review-content form label {
   padding: 40px 0 10px 0;
   font-size: 20px;
@@ -161,11 +166,22 @@
 .ticket-with-review-content form .asteriskField {
   display: none;
 }
+.ticket-with-review-content form #div_id_rating div {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.ticket-with-review-content form #div_id_rating .form-check label {
+  padding: 0 0 0 10px;
+}
+.ticket-with-review-content form #review-with-ticket-button-area {
+  display: flex;
+  justify-content: flex-end;
+}
 .ticket-with-review-content form button {
   width: 100px;
-  float: right;
   border-radius: 3px;
-  margin: 40px 0;
+  margin: 40px 0 20px 0;
 }
 
 body {
