--- a/main/static/main/styles/_following.scss
+++ b/main/static/main/styles/_following.scss
@@ -7,6 +7,19 @@
   h3 {
     margin-bottom: 40px;
   }
+  form {
+    display: flex;
+    width: 80%;
+    div {
+      width: 95%;
+      input {
+        text-align: center;
+      }
+    }
+    button {
+      width: 110px;
+    }
+  }
 }
 
 .table {
