--- a/main/static/main/styles/styles.css
+++ b/main/static/main/styles/styles.css
@@ -105,6 +105,19 @@
 .following h3 {
   margin-bottom: 40px;
 }
+.following form {
+  display: flex;
+  width: 80%;
+}
+.following form div {
+  width: 95%;
+}
+.following form div input {
+  text-align: center;
+}
+.following form button {
+  width: 110px;
+}
 
 .table {
   width: 80vw;
