--- a/main/templates/main/create_review_with_ticket.html
+++ b/main/templates/main/create_review_with_ticket.html
@@ -10,7 +10,7 @@
 
 <div class="ticket-with-review-content">
   <h4>Create a Review</h4>
-  <form method="post" class="form-group">
+  <form method="post" class="form-group" enctype="multipart/form-data">
     <div class="form-section">
       <h4>Book / Article</h4>
       {{ ticket_form|crispy }}
