--- a/main/templates/main/create_ticket.html
+++ b/main/templates/main/create_ticket.html
@@ -10,7 +10,7 @@
 
 <div class="ticket-content">
   <h4>Create a Ticket</h4>
-  <form method="post" class="form-group">
+  <form method="post" class="form-group" enctype="multipart/form-data">
     {{ form|crispy }}
     {% csrf_token %}
     <button type="submit">Submit</button>
