--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,4 +1,5 @@
 {% extends 'main/base.html' %}
+{% load main_extras %}
 
 {% block title %}
 Welcome
@@ -10,6 +11,27 @@ Welcome
     <a class="btn btn-light" href="{% url 'create_review_with_ticket' %}" role="button">Post a Review</a>
   </div>
   <div class="feed">
-
+    {% for post in feed %}
+      {% if post|model_type == 'Ticket' %}
+        <div class="ticket-view">
+          <div class="ticket-head">
+            <p>{% display_poster post.user %} requested a review</p>
+            <p>{{ post.time_created|get_posted_at_display }}</p>
+          </div>
+          <h5>{{ post.title }}</h5>
+          {% if post.description %}
+            <div class="description">
+            <p>{{ post.description }}</p>
+            {% if post.image %}
+              <img src="{{ post.image.url }}" alt="">
+            {% endif %}
+            </div>
+          {% endif %}
+          <div class="post-review-button-area">
+            <a type="button" role="button" class="btn btn-secondary" href="{% url 'ticket_response' %}">Post a Review</a>
+          </div>
+        </div>
+      {% endif %}
+    {% endfor %}
   </div>
 {% endblock content %}
