--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -19,7 +19,7 @@
 
   <body>
     <!-- NavBar -->
-    {% include "main/partials/navbar.html" %}
+    {% include "main/partials/navbar_snippet.html" %}
 
     {% block content %}
     <!-- Content will be here! -->
