--- a/main/static/main/styles/_home.scss
+++ b/main/static/main/styles/_home.scss
@@ -9,11 +9,38 @@
   }
 }
 
+.feed > * {
+  margin: 20px 0;
+}
+
 .feed {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 80vw;
+  .review-head {
+    display: flex;
+    justify-content: space-between;
+    width: 97%;
+  }
+  .review-body {
+    display: flex;
+    flex-direction: column;
+    width: 97%;
+    justify-content: flex-start;
+    p {
+      margin: 0;
+    }
+  }
+  .review-view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 95%;
+    border: solid 1px;
+    margin: 20px 0;
+    padding: 20px 0;
+  }
   .ticket-head {
     display: flex;
     justify-content: space-between;
@@ -22,7 +49,7 @@
   .ticket-view {
     width: 95%;
     border: solid 1px;
-    margin: 20px 0;
+    margin-top: 15px;
     padding: 20px 10px;
     .description {
       width: 80%;
@@ -31,6 +58,10 @@
       display: flex;
       justify-content: flex-end;
       width: 98%;
+    }
+    img {
+      max-width: 300px;
+      max-height: 300px;
     }
   }
 }
