--- a/main/static/main/styles/_home.scss
+++ b/main/static/main/styles/_home.scss
@@ -1,10 +1,10 @@
 .home-review-options {
-  width: 60vw;
+  width: 70vw;
   display: flex;
   justify-content: space-between;
   a {
     width: 50%;
-    margin: 50px;
+    margin: 30px 50px 10px 50px;
     border: solid 1px;
   }
 }
@@ -52,7 +52,7 @@
     margin-top: 15px;
     padding: 20px 10px;
     .description {
-      width: 80%;
+      display: flex;
     }
     .post-review-button-area {
       display: flex;
