--- a/main/static/main/styles/styles.scss
+++ b/main/static/main/styles/styles.scss
@@ -4,7 +4,8 @@
 @import "./home";
 @import "./following";
 @import "./create_ticket";
-@import "create_ticket_with_review";
+@import "./create_ticket_with_review";
+@import "./ticket_snippet";
 
 body {
   width: 100vw;
