Rating got displayed with stars

--- a/main/static/main/styles/_create_ticket_with_review.scss
+++ b/main/static/main/styles/_create_ticket_with_review.scss
@@ -30,7 +30,7 @@
         }
       }
     }
-    #review-with-ticket-button-area {
+    .review-with-ticket-button-area {
       display: flex;
       justify-content: flex-end;
     }
