--- a/main/templates/main/create_review_with_ticket.html
+++ b/main/templates/main/create_review_with_ticket.html
@@ -21,7 +21,7 @@
       <h4>Review</h4>
       {{ review_form|crispy }}
       {% csrf_token %}
-      <div id="review-with-ticket-button-area">
+      <div class="review-with-ticket-button-area">
         <button type="submit">Submit</button>
       </div>
 
