--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -19,4 +19,7 @@ Welcome
       {% endif %}
     {% endfor %}
   </div>
+
+  {% include "main/partials/page_navigator.html" %}
+
 {% endblock content %}
