--- a/main/static/main/styles/styles.scss
+++ b/main/static/main/styles/styles.scss
@@ -6,6 +6,7 @@
 @import "./create_ticket";
 @import "./create_ticket_with_review";
 @import "./ticket_snippet";
+@import "./review_snippet";
 
 body {
   width: 100vw;
