--- a/main/static/main/styles/_create_ticket.scss
+++ b/main/static/main/styles/_create_ticket.scss
@@ -6,17 +6,34 @@
   align-items: center;
   form {
     width: 100%;
+    .ticket-button-area {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 50px;
+      .upload-button-area {
+        button {
+          float: left;
+          margin-top: 30px;
+
+        }
+        float: left;
+      }
+    }
     label {
       padding:40px 0 10px 0;
       font-size: 20px;
+    }
+    img {
+      margin-top: 20px;
     }
     .asteriskField {
       display: none;
     }
     button {
-      width: 100px;
+      min-width: 150px;
       float: right;
-      border-radius: 3px;
+      border: solid 1px;
     }
   }
 }
