--- a/main/static/main/styles/_ticket_snippet.scss
+++ b/main/static/main/styles/_ticket_snippet.scss
@@ -15,9 +15,10 @@
       display: flex;
       justify-content: flex-end;
       width: 98%;
-    }
-    img {
-      max-width: 300px;
-      max-height: 300px;
+      margin-top: 30px;
+      a {
+        margin-left: 30px;
+        min-width: 100px;
+      }
     }
   }
