--- a/main/static/main/styles/styles.css
+++ b/main/static/main/styles/styles.css
@@ -155,17 +155,33 @@
 .ticket-content form {
   width: 100%;
 }
+.ticket-content form .ticket-button-area {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 50px;
+}
+.ticket-content form .ticket-button-area .upload-button-area {
+  float: left;
+}
+.ticket-content form .ticket-button-area .upload-button-area button {
+  float: left;
+  margin-top: 30px;
+}
 .ticket-content form label {
   padding: 40px 0 10px 0;
   font-size: 20px;
+}
+.ticket-content form img {
+  margin-top: 20px;
 }
 .ticket-content form .asteriskField {
   display: none;
 }
 .ticket-content form button {
-  width: 100px;
+  min-width: 150px;
   float: right;
-  border-radius: 3px;
+  border: solid 1px;
 }
 
 .ticket-with-review-content {
@@ -227,10 +243,11 @@
   display: flex;
   justify-content: flex-end;
   width: 98%;
+  margin-top: 30px;
 }
-.ticket-view img {
-  max-width: 300px;
-  max-height: 300px;
+.ticket-view .post-review-button-area a {
+  margin-left: 30px;
+  min-width: 100px;
 }
 
 .review-head {
@@ -273,6 +290,10 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+body img {
+  max-width: 300px;
+  max-height: 300px;
 }
 
 /*# sourceMappingURL=styles.css.map */
