--- a/main/static/main/styles/styles.scss
+++ b/main/static/main/styles/styles.scss
@@ -13,4 +13,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  img {
+      max-width: 300px;
+      max-height: 300px;
+  }
 }
