--- a/main/templates/main/partials/navbar_snippet.html
+++ b/main/templates/main/partials/navbar_snippet.html
@@ -31,7 +31,7 @@
             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Feed</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Posts</a>
+            <a class="nav-link" href="{% url 'posts' %}">Posts</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'following' %}">Following</a>
