edit reviews added

--- a/main/templates/main/edit_ticket.html
+++ b/main/templates/main/edit_ticket.html
@@ -16,11 +16,11 @@
     <img src="{{ image }}" alt="" id="ticket-image">
     <div class="ticket-button-area">
       <div class="upload-button-area">
-        <button class="btn btn-light" type="button" id="uploadImage" onclick="document.getElementById(
+        <button class="btn btn-secondary" type="button" id="uploadImage" onclick="document.getElementById(
         'id_image').click()">Upload New File</button>
       </div>
       <div>
-        <button class="btn btn-light" type="submit">Submit</button>
+        <button class="btn btn-secondary" type="submit">Submit</button>
       </div>
     </div>
   </form>
