--- a/main/static/main/styles/styles.css
+++ b/main/static/main/styles/styles.css
@@ -239,16 +239,6 @@
 .ticket-view .description {
   display: flex;
 }
-.ticket-view .post-review-button-area {
-  display: flex;
-  justify-content: flex-end;
-  width: 98%;
-  margin-top: 30px;
-}
-.ticket-view .post-review-button-area a {
-  margin-left: 30px;
-  min-width: 100px;
-}
 
 .review-head {
   display: flex;
@@ -294,6 +284,17 @@ body {
 body img {
   max-width: 300px;
   max-height: 300px;
+}
+
+.post-review-button-area {
+  display: flex;
+  justify-content: flex-end;
+  width: 98%;
+  margin-top: 30px;
+}
+.post-review-button-area a {
+  margin-left: 30px;
+  min-width: 100px;
 }
 
 /*# sourceMappingURL=styles.css.map */
