--- a/main/static/main/styles/styles.scss
+++ b/main/static/main/styles/styles.scss
@@ -18,3 +18,14 @@ body {
       max-height: 300px;
   }
 }
+
+.post-review-button-area {
+  display: flex;
+  justify-content: flex-end;
+  width: 98%;
+  margin-top: 30px;
+  a {
+    margin-left: 30px;
+    min-width: 100px;
+  }
+}
