--- a/main/templates/main/create_ticket.html
+++ b/main/templates/main/create_ticket.html
@@ -18,12 +18,12 @@
 
     <div class="ticket-button-area">
       <div class="upload-button-area">
-        <button class="btn btn-light" type="button" id="uploadImage"
+        <button class="btn btn-secondary" type="button" id="uploadImage"
                 onclick="document.getElementById('id_image').click()"
         >Upload File</button>
       </div>
       <div>
-        <button class="btn btn-light" type="submit">Submit</button>
+        <button class="btn btn-secondary" type="submit">Submit</button>
       </div>
     </div>
   </form>
