--- a/main/templates/main/partials/review_snippet.html
+++ b/main/templates/main/partials/review_snippet.html
@@ -27,4 +27,13 @@
       {% include "main/partials/ticket_snippet.html" %}
     {% endif %}
   {% endfor %}
+
+  {% if request.path == '/post/review' %}
+    <div class="post-review-button-area">
+      <a type="button" role="button" class="btn btn-secondary"
+       href="{% url 'edit_review' post.id %}">Edit</a>
+      <a type="button" role="button" class="btn btn-danger"
+       href="{% url 'delete_post' post.id %}">Delete</a>
+    </div>
+  {% endif %}
 </div>
