--- a/main/templates/main/partials/ticket_snippet.html
+++ b/main/templates/main/partials/ticket_snippet.html
@@ -26,7 +26,7 @@
     <div class="post-review-button-area">
       <a type="button" role="button" class="btn btn-secondary"
        href="{% url 'edit_ticket' post.id %}">Edit</a>
-      <a type="button" role="button" class="btn btn-secondary"
+      <a type="button" role="button" class="btn btn-danger"
        href="{% url 'delete_post' post.id %}">Delete</a>
     </div>
   {% endif %}
