--- a/main/templates/main/posts.html
+++ b/main/templates/main/posts.html
@@ -16,6 +16,10 @@ Review your own posts
     {% endfor %}
   </div>
 
+  <div class="modal-container" id="modal-container">
+    {% include "main/partials/delete_modal_snippet.html" %}
+  </div>
+
   {% include "main/partials/page_navigator.html" %}
 
 {% endblock content %}
