--- a/main/static/main/styles/styles.scss
+++ b/main/static/main/styles/styles.scss
@@ -7,6 +7,7 @@
 @import "./create_ticket_with_review";
 @import "./ticket_snippet";
 @import "./review_snippet";
+@import "./delete_modal";
 
 body {
   width: 100vw;
@@ -24,7 +25,7 @@ body {
   justify-content: flex-end;
   width: 98%;
   margin-top: 30px;
-  a {
+  button, a {
     margin-left: 30px;
     min-width: 100px;
   }
