delete-Modal-window closes by clicking outside it

--- a/main/templates/main/partials/delete_modal_snippet.html
+++ b/main/templates/main/partials/delete_modal_snippet.html
@@ -7,7 +7,7 @@
   </div>
   <div class="post-review-button-area">
     <a href="{% url 'posts' %}" type="button" role="button" class="btn btn-secondary"
-      >Return</a>
+      id="modalReturn-button">Return</a>
     <a type="button" role="button" class="btn btn-danger" id="confirmDelete-button"
        href="#">Delete</a>
   </div>
