--- a/main/static/main/styles/_create_ticket_with_review.scss
+++ b/main/static/main/styles/_create_ticket_with_review.scss
@@ -35,7 +35,7 @@
       justify-content: flex-end;
     }
     button {
-      width: 100px;
+      min-width: 150px;
       border-radius: 3px;
       margin: 40px 0 20px 0;
     }
