--- a/main/static/main/styles/styles.css
+++ b/main/static/main/styles/styles.css
@@ -219,7 +219,7 @@
   justify-content: flex-end;
 }
 .ticket-with-review-content form button {
-  width: 100px;
+  min-width: 150px;
   border-radius: 3px;
   margin: 40px 0 20px 0;
 }
