--- a/main/templates/main/create_review_with_ticket.html
+++ b/main/templates/main/create_review_with_ticket.html
@@ -15,6 +15,14 @@
       <h4>Book / Article</h4>
       {{ ticket_form|crispy }}
       {% csrf_token %}
+
+      <img src="" alt="" id="ticket-image">
+
+      <div class="upload-button-area">
+        <button class="btn btn-secondary" type="button" id="uploadImage"
+                onclick="document.getElementById('id_image').click()"
+        >Upload File</button>
+      </div>
     </div>
 
     <div class="form-section">
