--- a/main/templates/main/partials/navbar_snippet.html
+++ b/main/templates/main/partials/navbar_snippet.html
@@ -28,7 +28,7 @@
            style="{% if user.is_authenticated %}visibility:visible{% endif %}">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Feed</a>
+            <a class="nav-link" href="{% url 'home' %}">Feed</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="{% url 'posts' %}">Posts</a>
