--- a/main/templates/main/partials/ticket_snippet.html
+++ b/main/templates/main/partials/ticket_snippet.html
@@ -17,12 +17,14 @@
       <img src="{{ post.image.url }}" alt="">
     </div>
   {% endif %}
-  {% if not form and request.path != '/post/review' %}
+
+  {% url 'posts' as posts %}
+  {% if not form and request.path != posts %}
     <div class="post-review-button-area">
     <a type="button" role="button" class="btn btn-secondary"
        href="{% url 'create_review' post.id %}">Post a Review</a>
   </div>
-  {% elif request.path == '/post/review' %}
+  {% elif request.path == posts %}
     <div class="post-review-button-area">
       <a type="button" role="button" class="btn btn-secondary"
        href="{% url 'edit_ticket' post.id %}">Edit</a>
